<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.dogadoption.ui.home.MarketFragment"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_homeFragment_to_breedDetailFragment"
            app:destination="@id/breedDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/breedDetailFragment"
        android:name="com.example.dogadoption.ui.breeddetail.StockDetailFragment"
        android:label="@string/title_stock_detail">
        <argument
            android:name="symbol"
            app:argType="string" />
        <argument
            android:name="logoUrl"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_breedDetailFragment_to_adoptionFragment"
            app:destination="@id/adoptionFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.dogadoption.ui.favorites.WatchlistFragment"
        android:label="@string/title_watchlist" />

    <fragment
        android:id="@+id/adoptionFragment"
        android:name="com.example.dogadoption.ui.adoption.TradeFragment"
        android:label="@string/title_trade">
        <argument
            android:name="symbol"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/donationFragment"
        android:name="com.example.dogadoption.ui.donation.PriceAlertFragment"
        android:label="@string/title_price_alert" />

    <fragment
        android:id="@+id/reportStrayFragment"
        android:name="com.example.dogadoption.ui.reportstray.MarketSnapshotFragment"
        android:label="@string/title_market_snapshot" />

</navigation>
